<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="action_archivo">Generar Archivo Cierre</string>
    <string name="action_id">Ver ID</string>
    <string name="action_json">Descargar JSON</string>
    <string name="action_settings">Configuración</string>
    <string name="action_total">Ver Total de Venta</string>
    <string name="action_trx">Ver Transacciones</string>
    <string name="app_name">Poc Barra SunDeck (v 2.3)</string>
    <string name="auto_focus_off">Auto Focus [OFF]</string>
    <string name="auto_focus_on">Auto Focus [ON]</string>
    <string name="flash_off">Flash [OFF]</string>
    <string name="flash_on">Flash [ON]</string>
    <string name="hello_world">Hello world!</string>
</resources>
